--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="doordash.css">
     <title>DoorDash Food Delivery & Takeout - From Restaurants Near You</title>
-    <link rel="icon" href="img/favicon@2x.ico+">
+    <link rel="icon" href="img/favicon@2x.ico">
 </head>
 <body>
     <div class="dd">
